Updated home page to reflect changes for deployment

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,6 +3,7 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
-<h1> First Commit to github repository </h1>
+<h1> This is the banch used for differnet deployment slots </h1>
+<h2> In GitHub this is branch : TestingBranchForDeploymnetSlots</h2>
 
 Welcome to your new app.
